--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "test": "jest --config jestconfig.json",
     "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx --fix",
     "build": "tsc",
-    "local": "rm -rf lib passwift-types-0.1.0.tgz && tsc && webpack && npm pack && npm run installInApp && npm run installInNode && npm run installInReact && npm run installInWebWorkers",
+    "local": "rm -rf lib passwift-types-0.1.0.tgz && tsc && webpack && npm pack && npm run installInApp && npm run installInNode && npm run installInReact && npm run installInWebWorkers && npm run installInInternalTypes",
     "installInApp": "cd ../passwift-app && npm run updateTypes",
     "installInNode": "cd ../passwift-node && npm run updateTypes",
     "installInReact": "cd ../passwift-react && npm run updateTypes",
     "installInWebWorkers": "cd ../passwift-webworkers && npm run updateTypes",
+    "installInInternalTypes": "cd ../passwift-internal-types && npm run updateTypes",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
